src/components/Carousel/styles.module.scss
@use "@styles/styles.scss" as *;

.carousel {
  overflow: auto;
  overflow-x: scroll;
  white-space: nowrap;
  width: 100%;
  height: 100%;
  max-height: 235px;

  margin-top: 2rem;
}

.container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: 24px;
  &_title {
    font-size: 1.8rem;
    font-family: $font-family-titles;
    color: $purple-dark-2;
  }
}

.carousel::-webkit-scrollbar {
  width: 7px;
  height: 4px;
}

.carousel::-webkit-scrollbar-thumb {
  background-color: $purple-dark-1;
  border-radius: 10px;
}

@media only screen and (min-width: 768px) {
  .carousel {
    overflow: inherit;
    overflow-x: inherit;
    max-height: none;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
    place-items: center;
    grid-gap: 15px;
  }
  .carousel::-webkit-scrollbar {
    display: none;
  }
}

